--- a/src/routes/Home/components/HomeView.scss
+++ b/src/routes/Home/components/HomeView.scss
@@ -10,6 +10,7 @@
 	width: 40px;
 	height: 40px;
 	border: 1px solid black;
+	border-radius: 0;
 	text-align: center;
 	font-size: 16px;
 	padding-top: 1px;
