auto open all surrounding clear

--- a/src/routes/Home/components/HomeView.scss
+++ b/src/routes/Home/components/HomeView.scss
@@ -16,3 +16,8 @@
 	padding-top: 1px;
 	position: fixed;
 }
+
+.flag {
+	background-image: url('../assets/flag.png');
+	background-size: 40px 40px;
+}
