--- a/src/routes/Home/components/HomeView.scss
+++ b/src/routes/Home/components/HomeView.scss
@@ -21,3 +21,8 @@
 	background-image: url('../assets/flag.png');
 	background-size: 40px 40px;
 }
+
+.mine {
+	background-image: url('../assets/mine.jpg');
+	background-size: 40px 40px;
+}
