--- a/src/routes/Home/components/HomeView.scss
+++ b/src/routes/Home/components/HomeView.scss
@@ -14,7 +14,7 @@
 	text-align: center;
 	font-size: 16px;
 	padding-top: 1px;
-	position: fixed;
+	position: absolute;
 }
 
 .flag {
@@ -25,4 +25,11 @@
 .mine {
 	background-image: url('../assets/mine.jpg');
 	background-size: 40px 40px;
+}
+
+.board {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	width: 75%;
 }
